force-app/main/default/objects/Student__c/fields/Attendance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Percentage__c</fullName>
    <label>Attendance %</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>