force-app/main/default/objects/Student__c/fields/External_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Verification_Date__c</fullName>
    <label>External Verification Date</label>
    <type>DateTime</type>
</CustomField>