force-app/main/default/objects/Student__c/fields/External_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Verification_Status__c</fullName>
    <label>External Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>