force-app/main/default/objects/Student__c/fields/Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Roll_No__c</fullName>
    <label>Roll No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>