force-app/main/default/objects/Student__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>